remove draggable style

--- a/src/app/ngx-calendar/day/ngx-calendar-day-view/ngx-calendar-day-view.component.html
+++ b/src/app/ngx-calendar/day/ngx-calendar-day-view/ngx-calendar-day-view.component.html
@@ -60,7 +60,7 @@
 
           </mwl-calendar-day-view-event>
         </div>
-        <div class="cal-event-container cal-draggable cal-starts-within-day cal-ends-within-day ng-star-inserted" mwldraggable=""
+        <div class="cal-event-container cal-starts-within-day cal-ends-within-day ng-star-inserted" mwldraggable=""
           mwlresizable="" style="margin-top: 120px; height: 1170px; margin-left: 220px; width: 149px;">
           <mwl-calendar-day-view-event>
             <!---->
