--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,16 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<!-- <div style="background: green;height: 200px;">
 
-<ngx-calendar [events]="events" (open)="onOpenEvent($event)"></ngx-calendar>
+</div>
+<div  style="width: 50%">
 
+</div>
+
+<div style="background: green;height: 200px;"> -->
+
+<div>
+  <ngx-calendar  [events]="events" (open)="onOpenEvent($event)"></ngx-calendar>
+</div>
 
 <div style="
 
@@ -12,6 +21,8 @@ bottom: 30px;
 right: 0;
 background: blueviolet;
 
-"><button (click)="addEvent()">add</button></div>
+">
+  <button (click)="addEvent()">add</button>
+</div>
 
 <!-- <ngx-calendar-week></ngx-calendar-week> -->
