--- a/src/app/ngx-calendar/day/ngx-calendar-day-view/ngx-calendar-day-view.component.scss
+++ b/src/app/ngx-calendar/day/ngx-calendar-day-view/ngx-calendar-day-view.component.scss
@@ -1,89 +1,52 @@
-.cal-day-view {
-  margin-bottom: 85px;
-
-  .cal-hour-rows {
-    width: 100%;
-    border: solid 1px #e1e1e1;
-    overflow-x: scroll;
-    position: relative;
-  }
-
-  .cal-hour:nth-child(odd) {
-    background-color: #6f6e6e;
-  }
-
-  /* stylelint-disable-next-line selector-type-no-unknown */
-  mwl-calendar-day-view-hour-segment, /* fix for https://github.com/mattlewis92/angular-calendar/issues/260*/
-  .cal-hour-segment {
-    display: block;
-  }
-
-  .cal-hour-segment::after {
-    content: '\00a0';
-  }
-
-  .cal-hour:not(:last-child) .cal-hour-segment,
-  .cal-hour:last-child :not(:last-child) .cal-hour-segment {
+.black {
+  .line {
+    height: 30px;
     border-bottom: thin dashed #888f90;
   }
-
-  .cal-time {
-    font-weight: bold;
-    padding-top: 5px;
-    width: 70px;
-    text-align: center;
+  .name {
+    color: white;
   }
+}
 
-  .cal-hour-segment.cal-after-hour-start {
-    .cal-time {
-      display: none;
+.content {
+  display: flex;
+  margin-bottom: 30px;
+  .title {
+    width: 100px;
+    flex: 0 0 100px;
+  }
+  .strip {
+    position: relative;
+    width: 100%;
+    overflow-x: auto;
+  }
+  .hour {
+    height: 60px;
+    &:nth-child(odd) {
+      background: #6f6e6e;
+    }
+    &.name {
+      line-height: 60px;
+      text-align: center;
+    }
+    .line {
+      height: 30px;
+      display: flex;
+      &:hover {
+        background: wheat;
+      }
+      .active {
+        width: 100px;
+        height: 100%;
+        flex: 0 0 100px;
+        box-sizing: content-box;
+        z-index: 1;
+      }
     }
   }
+}
 
-  .cal-hour-segment:hover,
-  .cal-drag-over .cal-hour-segment {
-    color: black;
-    background-color: lightyellow;
-  }
-
-  .cal-event-container {
-    position: absolute;
-  }
-
-  .cal-event {
-    padding: 5px;
-    font-size: 12px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    height: 100%;
-    box-sizing: border-box;
-    background-color: #d1e8ff;
-    border: 1px solid #1e90ff;
-    color: #1e90ff;
-    user-select: none;
-  }
-
-  .cal-event-title:link {
-    color: currentColor;
-  }
-
-  .cal-draggable {
-    cursor: move;
-  }
-
-  .cal-starts-within-day .cal-event {
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-  }
-
-  .cal-ends-within-day .cal-event {
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-  }
-
-  .cal-all-day-event {
-    padding: 8px;
-    border: solid 1px;
-  }
+.bar {
+  width: 100px;
+  position: absolute;
 }
