--- a/src/app/ngx-calendar/ngx-calendar.component.scss
+++ b/src/app/ngx-calendar/ngx-calendar.component.scss
@@ -1,96 +1,110 @@
-.calendar {
-	-webkit-transform: translate3d(0, 0, 0);
-	-moz-transform: translate3d(0, 0, 0);
-	transform: translate3d(0, 0, 0);
-	width: 100%;
-	max-width: 1280px;
-	margin: 0 auto;
-	// height: 700px;
-  overflow: hidden;
-  overflow-y: auto;
-	max-height: 100vh;
+.content {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  .header {
+    height: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .title {
+      padding: 0;
+      margin: 0;
+      font-size: 20px;
+      line-height: 50px;
+      cursor: pointer;
+    }
+    .header-button {
+      padding: 1em;
+      .button {
+        border-style: solid;
+        cursor: pointer;
+        transition: all .5s linear;
+        &.left {
+          border-width: 7.5px 10px 7.5px 0;
+        }
+        &.right {
+          border-width: 7.5px 0 7.5px 10px;
+        }
+      }
+    }
+  }
+  &.black {
+    background: #4A4A4A;
+    .header {
+      background: #333333;
+    }
+    .title {
+      color: white;
+    }
+    .left {
+      border-color: transparent rgba(160, 159, 160, 1) transparent transparent;
+      &:hover {
+        border-color: transparent white transparent transparent;
+      }
+    }
+    .right {
+      border-color: transparent transparent transparent rgba(160, 159, 160, 1);
+      &:hover {
+        border-color: transparent transparent transparent white;
+      }
+    }
+  }
+  .view-block {
+    height: calc(100% - 50px);
+    overflow-y: auto;
+  }
 }
-.header {
-	height: 50px;
-	width: 100%;
-	background: rgba(66, 66, 66, 1);
-	text-align: center;
-	position: relative;
-	z-index: 100;
-	h1 {
-		margin: 0;
-		padding: 0;
-		font-size: 20px;
-		line-height: 50px;
-		font-weight: 100;
-		letter-spacing: 1px;
-	}
-}
-.left {
-	position: absolute;
-	width: 0px;
-	height: 0px;
-	border-style: solid;
-	top: 50%;
-	margin-top: -7.5px;
-	cursor: pointer;
-	border-width: 7.5px 10px 7.5px 0;
-	border-color: transparent rgba(160, 159, 160, 1) transparent transparent;
-	left: 20px;
-}
-.right {
-	position: absolute;
-	width: 0px;
-	height: 0px;
-	border-style: solid;
-	top: 50%;
-	margin-top: -7.5px;
-	cursor: pointer;
-	border-width: 7.5px 0 7.5px 10px;
-	border-color: transparent transparent transparent rgba(160, 159, 160, 1);
-	right: 20px;
-}
+
 .legend {
-	position: fixed;
-	bottom: 0;
-	width: 100%;
-	height: 30px;
-	background: rgba(60, 60, 60, 1);
-	line-height: 30px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 30px;
+  background: rgba(60, 60, 60, 1);
+  line-height: 30px;
 }
+
 .entry {
-	position: relative;
-	padding: 0 0 0 25px;
-	font-size: 13px;
-	display: inline-block;
-	line-height: 30px;
-	background: transparent;
-	&:after {
-		position: absolute;
-		content: '';
-		height: 5px;
-		width: 5px;
-		top: 12px;
-		left: 14px;
-	}
+  position: relative;
+  padding: 0 0 0 25px;
+  font-size: 13px;
+  display: inline-block;
+  line-height: 30px;
+  background: transparent;
+  &:after {
+    position: absolute;
+    content: '';
+    height: 5px;
+    width: 5px;
+    top: 12px;
+    left: 14px;
+  }
 }
+
 .entry.blue {
-	&:after {
-		background: rgba(156, 202, 235, 1);
-	}
+  &:after {
+    background: rgba(156, 202, 235, 1);
+  }
 }
+
 .entry.orange {
-	&:after {
-		background: rgba(247, 167, 0, 1);
-	}
+  &:after {
+    background: rgba(247, 167, 0, 1);
+  }
 }
+
 .entry.green {
-	&:after {
-		background: rgba(153, 198, 109, 1);
-	}
+  &:after {
+    background: rgba(153, 198, 109, 1);
+  }
 }
+
 .entry.yellow {
-	&:after {
-		background: rgba(249, 233, 0, 1);
-	}
+  &:after {
+    background: rgba(249, 233, 0, 1);
+  }
 }
