--- a/src/app/ngx-calendar/week/ngx-calendar-week-view/ngx-calendar-week-view.component.scss
+++ b/src/app/ngx-calendar/week/ngx-calendar-week-view/ngx-calendar-week-view.component.scss
@@ -1,79 +1,83 @@
-.cal-week-view .cal-day-headers {
-  display: flex;
-  margin-bottom: 3px;
-  border: 1px solid #e1e1e1;
-  margin-left: 2px;
-  margin-right: 2px;
+.black {
+  .cal-day-headers{
+    background: #4A4A4A;
+  }
+  .cal-header {
+    border-right: 1px solid #e1e1e1;
+    border-bottom: 1px solid #e1e1e1;
+    color: white;
+  }
 }
 
-.cal-week-view .cal-day-headers .cal-header:not(:last-child) {
-  border-right: 1px solid #e1e1e1;
-}
-
-.cal-week-view .cal-day-headers .cal-header {
-  flex: 1;
-  text-align: center;
-  padding: 5px;
-}
-
-.cal-week-view .cal-event,
-.cal-week-view .cal-header {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-.cal-week-view .cal-events-row {
-  position: relative;
-  height: 33px;
-}
-
-.cal-week-view .cal-event-container {
-  display: inline-block;
-  position: absolute;
-}
-
-.cal-week-view .cal-ends-within-week .cal-event {
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
-}
-
-.cal-week-view .cal-starts-within-week .cal-event {
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
-}
-
-.cal-week-view .cal-event,
-.cal-week-view .cal-header {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-.cal-week-view .cal-header.cal-today {
-  background-color: #289643;
-}
-
-.cal-week-view .cal-event {
-  padding: 0 10px;
-  font-size: 12px;
-  margin-left: 2px;
-  margin-right: 2px;
-  height: 30px;
-  line-height: 30px;
-  background-color: #d1e8ff;
-  border: 1px solid #1e90ff;
-  color: #1e90ff;
-}
-
-.cal-week-view .cal-event.orange {
-  background-color: #ffc681;
-  border-color: rgb(173, 33, 33);
-}
-
-.cal-week-view .cal-event.blue {
-  background-color: #c4e7ff;
-  border-color: #0834e3;
+.cal-week-view {
+  height: calc(100% - 30px);
+  overflow-y: auto;
+  .cal-day-headers {
+    display: flex;
+    position: absolute;
+    width: 100%;
+    z-index: 1;
+    .cal-header {
+      flex: 1;
+      text-align: center;
+      padding: 5px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      height: 50px;
+      &.cal-today {
+        background-color: #5cc18a;
+      }
+    }
+  }
+  .action-block {
+    padding-top: 50px;
+  }
+  .cal-event {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  .cal-events-row {
+    position: relative;
+    height: 33px;
+  }
+  .cal-event-container {
+    display: inline-block;
+    position: absolute;
+  }
+  .cal-ends-within-week .cal-event {
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+  }
+  .cal-starts-within-week .cal-event {
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+  }
+  .cal-event {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+  .cal-event {
+    padding: 0 10px;
+    font-size: 12px;
+    margin-left: 2px;
+    margin-right: 2px;
+    height: 30px;
+    line-height: 30px;
+    background-color: #d1e8ff;
+    border: 1px solid #1e90ff;
+    color: #1e90ff;
+    &.orange {
+      background-color: #ffc681;
+      border-color: rgb(173, 33, 33);
+    }
+    &.blue {
+      background-color: #c4e7ff;
+      border-color: #0834e3;
+    }
+  }
 }
 
 a {
@@ -86,5 +90,3 @@ a {
 .cal-week-view .cal-event-title:link {
   color: currentColor;
 }
-
-
