--- a/src/styles.css
+++ b/src/styles.css
@@ -4,19 +4,13 @@
   }
 
   body {
-   overflow: hidden;
+   /* overflow: hidden;
    font-family: 'HelveticaNeue-UltraLight', 'Helvetica Neue UltraLight', 'Helvetica Neue', Arial, Helvetica, sans-serif;
    font-weight: 100;
-   color: rgba(255, 255, 255, 1);
+   color: rgba(255, 255, 255, 1); */
    margin: 0;
    padding: 0;
-   background: #4A4A4A;
-   -webkit-touch-callout: none;
-   -webkit-user-select: none;
-   -khtml-user-select: none;
-   -moz-user-select: none;
-   -ms-user-select: none;
-   user-select: none;
+   /* background: #4A4A4A; */
   }
 
 
