add day-view logic

--- a/src/app/ngx-calendar/day/ngx-calendar-day-view/ngx-calendar-day-view.component.html
+++ b/src/app/ngx-calendar/day/ngx-calendar-day-view/ngx-calendar-day-view.component.html
@@ -12,7 +12,10 @@
 
 
     <!-- events -->
-    <div *ngFor="let item of data" class="bar" [ngStyle]="item.style">
+    <div *ngFor="let dayEvent of dayEvents" class="bar" [ngStyle]="dayEvent.style">
+      <span style="color: white">
+          {{ dayEvent.data.title }}
+      </span>
     </div>
      <!--<div style="background: green;
     height: 90px;
