調整month、week、day樣式

--- a/src/app/ngx-calendar/ngx-calendar.component.html
+++ b/src/app/ngx-calendar/ngx-calendar.component.html
@@ -21,11 +21,25 @@
 
   </div>
 
+  <ul class="type-buttom" [@flyInOut]="legendOpen">
+    <li>
+      <button class="button day" type="button" [disabled]="viewMode === 'day'" (click)="chaneMode('day')">day</button>
+    </li>
+
+    <li>
+      <button class="button week" type="button" [disabled]="viewMode === 'week'" (click)="chaneMode('week')">week</button>
+    </li>
+
+    <li>
+      <div style="display: flex;">
+        <span class="open-menu" (click)="legendToggle()"></span>
+        <button class="button month" type="button" [disabled]="viewMode === 'month'" (click)="chaneMode('month')">month</button>
+      </div>
+    </li>
+  </ul>
+
   <div class="legend">
     <span class="entry orange">課程</span>
     <span class="entry blue">海訓</span>
-    <button type="button" style="float: right;" [disabled]="viewMode === 'day'" (click)="chaneMode('day')">day</button>
-    <button type="button" style="float: right;" [disabled]="viewMode === 'week'" (click)="chaneMode('week')">week</button>
-    <button type="button" style="float: right;" [disabled]="viewMode === 'month'" (click)="chaneMode('month')">month</button>
   </div>
 </div>
