--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
   <ngx-calendar [className]="theme" [events]="events" (open)="onOpenEvent($event)"></ngx-calendar>
 </div>
 
-<div style="
+<!-- <div style="
 
 position: fixed;
 width: 40px;
@@ -24,6 +24,6 @@ background: blueviolet;
 ">
   <button (click)="addEvent()">add</button>
   <button (click)="changeTheme()">{{ theme }}</button>
-</div>
+</div> -->
 
 <!-- <ngx-calendar-week></ngx-calendar-week> -->
