--- a/src/app/ngx-calendar/month/ngx-calendar-month-view/ngx-calendar-month-view.component.scss
+++ b/src/app/ngx-calendar/month/ngx-calendar-month-view/ngx-calendar-month-view.component.scss
@@ -325,9 +325,10 @@
 .details {
   position: relative;
   width: 100%;
-  height: 75px;
+  height: 120px;
   margin-top: 5px;
   border-radius: 4px;
+  overflow-y: auto;
 }
 
 .details.in {
@@ -361,7 +362,7 @@
 }
 
 .events {
-  height: 75px;
+  // min-height: 75px;
   padding: 7px 0;
   overflow-y: auto;
   overflow-x: hidden;
