新增 bar的 orange 跟 blue 的css屬性

--- a/src/app/ngx-calendar/day/ngx-calendar-day-view/ngx-calendar-day-view.component.scss
+++ b/src/app/ngx-calendar/day/ngx-calendar-day-view/ngx-calendar-day-view.component.scss
@@ -64,4 +64,14 @@
 .bar {
   width: 100px;
   position: absolute;
+  color: #007bff;
+
+  &.orange {
+    background-color: #ffc681;
+    border-color: rgb(173, 33, 33);
+  }
+  &.blue {
+    background-color: #c4e7ff;
+    border-color: #0834e3;
+  }
 }
