以ngClass綁定 data.color, 移除span的style

--- a/src/app/ngx-calendar/day/ngx-calendar-day-view/ngx-calendar-day-view.component.html
+++ b/src/app/ngx-calendar/day/ngx-calendar-day-view/ngx-calendar-day-view.component.html
@@ -12,8 +12,8 @@
 
 
     <!-- events -->
-    <div *ngFor="let dayEvent of dayEvents" class="bar" [ngStyle]="dayEvent.style">
-      <span style="color: white">
+    <div *ngFor="let dayEvent of dayEvents" class="bar" [ngStyle]="dayEvent.style" [ngClass]="dayEvent.data.color">
+      <span>
           {{ dayEvent.data.title }}
       </span>
     </div>
