綁定單日事件的 class 資訊

--- a/src/app/ngx-calendar/day/ngx-calendar-day-view/ngx-calendar-day-view.component.html
+++ b/src/app/ngx-calendar/day/ngx-calendar-day-view/ngx-calendar-day-view.component.html
@@ -12,7 +12,9 @@
 
 
     <!-- events -->
-    <div *ngFor="let dayEvent of dayEvents" class="bar" [ngStyle]="dayEvent.style" [ngClass]="dayEvent.data.color">
+    <div *ngFor="let dayEvent of dayEvents" class="bar" [ngStyle]="dayEvent.style" [ngClass]="dayEvent.data.color"
+      [class.cal-starts-within-day]="dayEvent.startsBeforeWeek"
+      [class.cal-ends-within-day]="dayEvent.endsAfterWeek">
       <span>
           {{ dayEvent.data.title }}
       </span>
