add display block on component

--- a/src/app/ngx-calendar/month/ngx-calendar-month-view/ngx-calendar-month-view.component.scss
+++ b/src/app/ngx-calendar/month/ngx-calendar-month-view/ngx-calendar-month-view.component.scss
@@ -1,4 +1,6 @@
-/* Animations are cool!  */
+:host {
+  display: block;
+}/* Animations are cool!  */
 
 @-webkit-keyframes moveFromTopFade {
   from {
