--- a/src/app/ngx-calendar/day/ngx-calendar-day-view/ngx-calendar-day-view.component.scss
+++ b/src/app/ngx-calendar/day/ngx-calendar-day-view/ngx-calendar-day-view.component.scss
@@ -1,3 +1,7 @@
+:host {
+  display: block;
+}
+
 .black {
   .hour {
     .line {
@@ -66,7 +70,6 @@
   position: absolute;
   color: #007bff;
   padding: 5px;
-
   &.orange {
     background-color: #ffc681;
     border: 1px solid rgb(173, 33, 33);
@@ -75,7 +78,6 @@
     background-color: #c4e7ff;
     border: 1px solid #1e90ff;
   }
-
   &.cal-starts-within-day {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
