官方提供: https://angular.io/guide/component-styles

--- a/src/app/ngx-calendar/month/ngx-calendar-month-view/ngx-calendar-month-view.component.scss
+++ b/src/app/ngx-calendar/month/ngx-calendar-month-view/ngx-calendar-month-view.component.scss
@@ -1,7 +1,9 @@
+/* https://angular.io/guide/component-styles */
 :host {
   display: block;
-}/* Animations are cool!  */
+}
 
+/* Animations are cool!  */
 @-webkit-keyframes moveFromTopFade {
   from {
     opacity: .3;
