--- a/src/app/ngx-calendar/ngx-calendar.component.scss
+++ b/src/app/ngx-calendar/ngx-calendar.component.scss
@@ -156,18 +156,18 @@
     width: 5px;
     top: 12px;
     left: 14px;
-    &.blue {
-      background: rgba(156, 202, 235, 1);
-    }
-    &.orange {
-      background: rgba(247, 167, 0, 1);
-    }
-    &.green {
-      background: rgba(153, 198, 109, 1);
-    }
-    &.yellow {
-      background: rgba(249, 233, 0, 1);
-    }
+  }
+  &.blue:after {
+    background: rgba(156, 202, 235, 1);
+  }
+  &.orange:after {
+    background: rgba(247, 167, 0, 1);
+  }
+  &.green:after {
+    background: rgba(153, 198, 109, 1);
+  }
+  &.yellow:after {
+    background: rgba(249, 233, 0, 1);
   }
 }
 
